# agile_demo

./: CMakeLists.txt  README.md  package.xml
agile_demo_bringup/: CMakeLists.txt  agile_demo.rviz  package.xml
agile_demo_bringup/launch/: agile_demo.launch  ur5_ros_control.launch
agile_demo_core/: CMakeLists.txt  package.xml
agile_demo_core/include/agile_demo_core/: coordinator.hpp
agile_demo_core/src/: coordinator.cpp
agile_demo_motion/: CMakeLists.txt  package.xml
agile_demo_motion/include/agile_demo_motion/: grasp_planner.hpp  motion_planner.hpp  util.hpp
agile_demo_motion/src/: grasp_planner.cpp  motion_planner.cpp
agile_demo_msgs/: CMakeLists.txt  package.xml
agile_demo_msgs/srv/: PublishPointCloud.srv
agile_demo_simulation/: CMakeLists.txt  package.xml
agile_demo_simulation/launch/: bringup.launch
agile_demo_simulation/srdf/: demo.srdf  demo.srdf.xacro
agile_demo_vision/: CMakeLists.txt  package.xml
agile_demo_vision/include/agile_demo_vision/: pointcloud_publisher.hpp
agile_demo_vision/src/: pointcloud_publisher.cpp
launch/: robot_description.launch
urdf/: demo.urdf  demo.urdf.xacro
