<?xml version="1.0"?>
<package format="2">
	<name>agile_demo_msgs</name>
	<version>1.0.0</version>
	<description>agile_demo_msgs</description>
	<license>GPLv3</license>

	<maintainer email="w.k.h.ko91@gmail.com">Wilson Ko</maintainer>
	<author email="w.k.h.ko91@gmail.com">Wilson Ko</author>

	<buildtool_depend>catkin</buildtool_depend>
	<depend>message_generation</depend>
	<depend>message_runtime</depend>
	<depend>geometry_msgs</depend>

	<export>
	</export>
</package>
